# legals

./: .gitignore  main.py  package-lock.json  package.json  pyproject.toml
app/: app.py
app/services/: legal_service.py
backend/: .env.example  pyproject.toml
backend/app/: app.py
backend/app/services/: legal_service.py
backend/benchmarks/: benchmark_models.py  constitution_articles.json  pull_models.py  rag_results.json  setup_rag.py
backend/data/sops/: traffic_stop.md
backend/tests/: test_endpoints.py
benchmarks/: judge_pipeline.py  judge_results.json  rag_benchmark.py  results.json
data/sops/: bribery_complaint.md  police_report.md
frontend/: package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BentoGrid.tsx  ChatInterface.tsx  FloatingCard.tsx  LegalAssistant.tsx  ThemeToggle.tsx
frontend/src/components/landing/: FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Pricing.tsx
frontend/src/components/ui/: Accordion.tsx
frontend/src/store/: useStore.ts
tests/: test_endpoints.py  test_query_api.py
